--- a/style/style.css
+++ b/style/style.css
@@ -14,3 +14,12 @@ P{
 #ex3{
     background-color: rgb(0, 120, 240);
 }
+#ex4{
+    background-color: rgba(0, 120, 240, 0.5);
+}
+#ex5{
+    background-color: rgba(0, 120, 240, 0.5);
+}
+span{
+    background-color: yellow;
+}
